<resources>
    <string name="app_name">hw_weather</string>
    <string name="appTitle">Weather</string>
    <string name="switchTheme">Switch theme</string>
    <string name="monday">Mon</string>
    <string name="temperature">0°C</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="wind">Wind</string>
    <string name="windValue">0 m/s</string>
    <string name="humidity">Humidity</string>
    <string name="humidValue">100%</string>
</resources>
